--- a/index.html
+++ b/index.html
@@ -57,6 +57,55 @@
                     </div>
                 </div>
             </header>
+
+            <!-- Clients -->
+            <div class="clients">
+                <div class="content">
+                    <div class="row">
+                        <!-- Logo -->
+                        <img src="./assets/img/logo.svg" alt="Besnik." />
+                        <!-- Stars -->
+                        <div class="stars">
+                            <img src="./assets/img/star.svg" alt="Star" />
+                            <img src="./assets/img/star.svg" alt="Star" />
+                            <img src="./assets/img/star.svg" alt="Star" />
+                            <img src="./assets/img/star.svg" alt="Star" />
+                            <img src="./assets/img/star.svg" alt="Star" />
+                        </div>
+                    </div>
+
+                    <div class="row row-desc">
+                        <p class="desc">
+                            More than 45,000+ companies trust besnik
+                        </p>
+                        <p class="desc">5 Star Ratings (2k+ Review)</p>
+                    </div>
+
+                    <div class="images">
+                        <a href="#!"
+                            ><img
+                                src="./assets/img/me-undies.svg"
+                                alt="Me Undies"
+                        /></a>
+                        <a href="#!"
+                            ><img src="./assets/img/slack.svg" alt="Slack"
+                        /></a>
+                        <a href="#!"
+                            ><img src="./assets/img/amazon.svg" alt="Amazon"
+                        /></a>
+                        <a href="#!"
+                            ><img
+                                src="./assets/img/woo-commerce.svg"
+                                alt="Woo E-commerce"
+                        /></a>
+                        <a href="#!"
+                            ><img
+                                src="./assets/img/sitepoint.svg"
+                                alt="Site point"
+                        /></a>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
