--- a/index.html
+++ b/index.html
@@ -171,6 +171,140 @@
                     <a href="#!" class="btn">Sell Full Guidelines</a>
                 </div>
             </div>
+
+            <!-- Features -->
+            <div class="featured">
+                <div class="content">
+                    <header>
+                        <h2 class="sub-title">Featured Properties</h2>
+                        <div class="row">
+                            <p class="desc">
+                                Everything you need to know when you're looking
+                            </p>
+                            <a href="#!" class="link">
+                                <span>View All Properties</span>
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="arrow right"
+                                />
+                            </a>
+                        </div>
+                    </header>
+
+                    <div class="list">
+                        <!-- Featured item 1 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/hosoryu.jpg"
+                                alt="Nikko Apartments"
+                                class="thumb"
+                            />
+                            <div class="body">
+                                <h3 class="title">Nikko Apartments</h3>
+                                <p class="desc">
+                                    8502 Preston Rd. Inglewood, Maine 98280
+                                </p>
+                                <div class="info">
+                                    <img
+                                        src="./assets/img/beds.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">5 Beds</span>
+
+                                    <img
+                                        src="./assets/img/both.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2 both</span>
+
+                                    <img
+                                        src="./assets/img/sqft.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Featured item 2 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/onosato.jpg"
+                                alt="Nikko Apartments"
+                                class="thumb"
+                            />
+                            <div class="body">
+                                <h3 class="title">CouCou Homestead</h3>
+                                <p class="desc">
+                                    8502 Preston Rd. Inglewood, Maine 98280
+                                </p>
+                                <div class="info">
+                                    <img
+                                        src="./assets/img/beds.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">5 Beds</span>
+
+                                    <img
+                                        src="./assets/img/both.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2 both</span>
+
+                                    <img
+                                        src="./assets/img/sqft.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Featured item 3 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/akua.png"
+                                alt="Nikko Apartments"
+                                class="thumb"
+                            />
+                            <div class="body">
+                                <h3 class="title">Lavis 18 Residence</h3>
+                                <p class="desc">
+                                    8502 Preston Rd. Inglewood, Maine 98280
+                                </p>
+                                <div class="info">
+                                    <img
+                                        src="./assets/img/beds.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">5 Beds</span>
+
+                                    <img
+                                        src="./assets/img/both.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2 both</span>
+
+                                    <img
+                                        src="./assets/img/sqft.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <span class="label">2000 Sqft</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
