--- a/index.html
+++ b/index.html
@@ -194,14 +194,20 @@
                     <div class="list">
                         <!-- Featured item 1 -->
                         <div class="item">
-                            <img
-                                src="./assets/img/hosoryu.jpg"
-                                alt="Nikko Apartments"
-                                class="thumb"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/hosoryu.jpg"
+                                    alt="Nikko Apartments"
+                                    class="thumb"
+                                />
+                            </a>
                             <div class="body">
-                                <h3 class="title">Nikko Apartments</h3>
-                                <p class="desc">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >Nikko Apartments</a
+                                    >
+                                </h3>
+                                <p class="desc line-clamp">
                                     8502 Preston Rd. Inglewood, Maine 98280
                                 </p>
                                 <div class="info">
@@ -231,14 +237,20 @@
 
                         <!-- Featured item 2 -->
                         <div class="item">
-                            <img
-                                src="./assets/img/onosato.jpg"
-                                alt="Nikko Apartments"
-                                class="thumb"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/onosato.jpg"
+                                    alt="Nikko Apartments"
+                                    class="thumb"
+                                />
+                            </a>
                             <div class="body">
-                                <h3 class="title">CouCou Homestead</h3>
-                                <p class="desc">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >CouCou Homestead</a
+                                    >
+                                </h3>
+                                <p class="desc line-clamp">
                                     8502 Preston Rd. Inglewood, Maine 98280
                                 </p>
                                 <div class="info">
@@ -268,14 +280,20 @@
 
                         <!-- Featured item 3 -->
                         <div class="item">
-                            <img
-                                src="./assets/img/akua.png"
-                                alt="Nikko Apartments"
-                                class="thumb"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/akua.png"
+                                    alt="Nikko Apartments"
+                                    class="thumb"
+                                />
+                            </a>
                             <div class="body">
-                                <h3 class="title">Lavis 18 Residence</h3>
-                                <p class="desc">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >Lavis 18 Residence</a
+                                    >
+                                </h3>
+                                <p class="desc line-clamp">
                                     8502 Preston Rd. Inglewood, Maine 98280
                                 </p>
                                 <div class="info">
