feat: code statistic section

--- a/index.html
+++ b/index.html
@@ -323,6 +323,179 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Statistics -->
+            <div class="stats">
+                <div class="content">
+                    <div class="row">
+                        <div class="img-block">
+                            <img
+                                class="image"
+                                src="./assets/img/stats-img.jpg"
+                                alt="You’ve found a neighborhood you love."
+                            />
+                            <!-- Trend -->
+                            <div class="stats-trend">
+                                <div class="row">
+                                    <strong class="value">40,000+</strong>
+                                    <img
+                                        src="./assets/img/arrow-trend-up.svg"
+                                        alt="arrow trend up"
+                                        class="icon"
+                                    />
+                                </div>
+                                <p class="desc">
+                                    By avarage for 2 bedroom apments in San
+                                    Francisco, CA
+                                </p>
+                                <div class="seperate"></div>
+
+                                <div class="avatar-block">
+                                    <div class="avatar-group">
+                                        <div
+                                            class="avatar"
+                                            style="--bg-color: #1f3bb1"
+                                        >
+                                            D
+                                        </div>
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar"
+                                            class="avatar"
+                                        />
+                                        <div
+                                            class="avatar"
+                                            style="--bg-color: #f8c120"
+                                        >
+                                            M
+                                        </div>
+                                        <img
+                                            src="./assets/img/avatar-3.jpg"
+                                            alt="avatar"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-4.jpg"
+                                            alt="avatar-4"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar-1"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                        <div
+                                            class="avatar"
+                                            style="--bg-color: #f97f6b"
+                                        >
+                                            T
+                                        </div>
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar-1"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                        <div
+                                            class="avatar"
+                                            style="--bg-color: #73a242"
+                                        >
+                                            Q
+                                        </div>
+                                        <img
+                                            src="./assets/img/avatar-4.jpg"
+                                            alt="avatar-4"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar-1"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar-1"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                    <div class="avatar-group">
+                                        <img
+                                            src="./assets/img/avatar-1.jpg"
+                                            alt="avatar-1"
+                                            class="avatar"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar-2.jpg"
+                                            alt="avatar-2"
+                                            class="avatar"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <h2 class="sub-title">
+                                You’ve found a neighborhood you love.
+                            </h2>
+                            <p class="desc">
+                                When you own a home, you’re committing to living
+                                in one location for a while. In a recent Trulia
+                                survey, we found that five out of six
+                                respondents said finding the right neighborhood
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="row row-qty">
+                        <div class="qty-item">
+                            <strong class="qty">2,500</strong>
+                            <p class="qty-desc">Homes For Sale</p>
+                        </div>
+                        <div class="qty-item">
+                            <strong class="qty">5,000+</strong>
+                            <p class="qty-desc">Homes Recently Sold</p>
+                        </div>
+                        <div class="qty-item">
+                            <strong class="qty">170+</strong>
+                            <p class="qty-desc">Price Reduced</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
