--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <title>F8 Project 01</title>
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     </head>
 
@@ -518,6 +524,104 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <div class="content">
+                    <div class="row row-top">
+                        <!-- Columns -->
+                        <div class="column">
+                            <h3 class="heading">Product</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">Listing</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Property</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Agents</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="heading">Resources</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">Our Homes</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Member Stories</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Video</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Free trial</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="heading">Company</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">Patnerships</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Terms of use</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Privacy</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Sitemap</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="heading">Get in touch</h3>
+                            <p class="desc">
+                                You’ll find your next home, in any style you
+                                prefer.
+                            </p>
+                            <div class="social">
+                                <a href="#!" class="social-link">
+                                    <img
+                                        src="./assets/img/facebook.png"
+                                        alt="facebook"
+                                    />
+                                </a>
+                                <a href="#!" class="social-link">
+                                    <img
+                                        src="./assets/img/twitter.png"
+                                        alt="twitter"
+                                    />
+                                </a>
+                                <a href="#!" class="social-link">
+                                    <img
+                                        src="./assets/img/linedin.png"
+                                        alt="linedin"
+                                    />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row row-bottom">
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="Besnik."
+                            class="logo"
+                        />
+                        <p class="copyright">
+                            Copyright 2020.com, All rights reserved.
+                        </p>
+                    </div>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
