feat: responsive for mobile

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
           <div class="row row-desc">
             <p class="desc">More than 45,000+ companies trust besnik</p>
-            <p class="desc">5 Star Ratings (2k+ Review)</p>
+            <p class="desc hide-on-mobile">5 Star Ratings (2k+ Review)</p>
           </div>
 
           <div class="images">
@@ -205,7 +205,7 @@
               <p class="desc">
                 Everything you need to know when you're looking
               </p>
-              <a href="#!" class="link">
+              <a href="#!" class="link hide-on-mobile">
                 <span>View All Properties</span>
                 <img src="./assets/img/arrow-right.svg" alt="arrow right" />
               </a>
@@ -299,6 +299,13 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="view-all show-on-mobile">
+            <a href="#!" class="link">
+              <span>View All Properties</span>
+              <img src="./assets/img/arrow-right.svg" alt="arrow right" />
+            </a>
           </div>
         </div>
       </div>
@@ -549,7 +556,11 @@
         </div>
 
         <div class="row row-bottom">
-          <img src="./assets/img/logo.svg" alt="Besnik." class="logo" />
+          <img
+            src="./assets/img/logo.svg"
+            alt="Besnik."
+            class="logo hide-on-mobile"
+          />
           <p class="copyright">Copyright 2020.com, All rights reserved.</p>
         </div>
       </div>
